--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <!-- Favicon icon -->
-<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
 <title>POS K&N Store</title>
 </head>
 <body>
