--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!doctype html>
-<html lang="th">
-<head>
-<meta charset="utf-8"
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<!-- Favicon icon -->
-<link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
-<title>POS K&N Store</title>
-</head>
-<body>
-    <iframe style="height: 100vh;" src="https://script.google.com/macros/s/AKfycbwWEGUV4bRjdr2p2bng3guIsSwXio43pTxp5pp_QhcPI_8puBjuG-Krd4sPw9r-RB9d/exec" frameborder="0" width="100%" height="100%"></iframe>
-</body>
+<!DOCTYPE html>
+<html>
+   <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+      <base target="_top">
+   </head>
+   <body>
+      <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="https://script.google.com/macros/s/AKfycbwWEGUV4bRjdr2p2bng3guIsSwXio43pTxp5pp_QhcPI_8puBjuG-Krd4sPw9r-RB9d/exec"></iframe>
+   </body>
 </html>
