--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <title>POS K&N Store</title>
 </head>
 <body>
-    <iframe style="height: 90vh;" src="https://script.google.com/macros/s/AKfycbwWEGUV4bRjdr2p2bng3guIsSwXio43pTxp5pp_QhcPI_8puBjuG-Krd4sPw9r-RB9d/exec" frameborder="0" width="100%" height="100%"></iframe>
+    <iframe style="height: 90vh; width: 90%;" src="https://script.google.com/macros/s/AKfycbwWEGUV4bRjdr2p2bng3guIsSwXio43pTxp5pp_QhcPI_8puBjuG-Krd4sPw9r-RB9d/exec" frameborder="0"></iframe>
 </body>
 </html>
