--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <!-- Favicon icon -->
 <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
-<title>POS K&N Store</title>
+<title>SlipUpload K&N Store</title>
 </head>
 <body>
-    <iframe style="height: 90vh; width: 100%;" src="https://script.google.com/macros/s/AKfycbwWEGUV4bRjdr2p2bng3guIsSwXio43pTxp5pp_QhcPI_8puBjuG-Krd4sPw9r-RB9d/exec" frameborder="0"></iframe>
+    <iframe style="height: 100vh;" src="https://script.google.com/macros/s/AKfycbwkkXZkf_covrUwnKu4ZI_draPtHOs4pUKaVkJaqVMVFNigSymqX0iyqlU85vsZeMsJ/exec" frameborder="0" width="100%" height="100%"></iframe>
 </body>
 </html>
